--- a/3D Roll Ball/Assembly-CSharp.csproj
+++ b/3D Roll Ball/Assembly-CSharp.csproj
@@ -57,9 +57,8 @@
   <ItemGroup>
      <Compile Include="Assets\Script\CameraController.cs" />
      <Compile Include="Assets\Script\MainMenu.cs" />
-     <Compile Include="Assets\Script\MiniMap.cs" />
+     <Compile Include="Assets\Script\Minimap.cs" />
      <Compile Include="Assets\Script\PauseMenu.cs" />
-     <Compile Include="Assets\Script\PickUps.cs" />
      <Compile Include="Assets\Script\PlayerController.cs" />
      <Compile Include="Assets\Script\Rotator.cs" />
      <Compile Include="Assets\Script\TutorialController.cs" />
